--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">KotlinMVVM</string>
+    <string name="app_tab_text_1">首页</string>
+    <string name="app_tab_text_2">次页</string>
+    <string name="app_tab_text_3">三页</string>
+    <string name="app_tab_text_4">我的</string>
 </resources>
